--- a/css/sidemenu.css
+++ b/css/sidemenu.css
@@ -5,15 +5,15 @@
 .side-menu{
     position: fixed;
     display: flex;
-    top: 0;
     flex-direction: column;
     justify-content: space-between;
-    width: 20%;
-    height: 100%;    /*box-shadow: 3px 0px 50px rgba(17, 17, 16, 0.829) */
+    width: 20.111%;
+    z-index: 5;
+    height: 100%;
     background-color: rgba(17, 17, 16);
 }
 
-.logo{
+.side-menu__logo{
     display: flex;
     justify-content: center;
     margin-bottom: 85px;
@@ -30,19 +30,20 @@
     text-transform: uppercase;
 }
 
-.navbar{
+.side-menu__navbar{
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
 }
 
-.navbar-item{
+.side-menu__navbar-item{
     display: flex;
     justify-content: center;
-    margin-bottom: 15px;
+    align-items: center;
+    height: 30px;
 }
 
-.navlink{
+.nav-link{
     color:#c3c3c3;
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
@@ -52,64 +53,79 @@
     text-transform: uppercase;
 }
 
-.navlink:hover{
+.nav-link:hover{
     color: white;
 }
 
-.user-login-form{
+.user-login{
     display: flex;
     align-items: center;
     flex-direction: column;
     margin-bottom: 50px;
 }
 
-.login-form-button{
+.side-menu__login-button-wrapper, .side-menu__register-button-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.login-form-open-btn{
+    color:#c3c3c3;
+    font-size: 20px;
+    text-transform: uppercase;
     background-color: transparent;
     font-family: "Montserrat", sans-serif;
     transition: 0.2s linear;
     border: none;
 }
 
-.login-button{
-    color:#c3c3c3;
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
-.login-button:hover{
-    color: white;
-}
-
-.create-account-button{
+.register-form-open-btn{
     color:#838696;
     font-size: 15px;
     text-transform: uppercase;
+    background-color: transparent;
+    font-family: "Montserrat", sans-serif;
+    transition: 0.15s linear;
+    border: none;
 }
 
-.create-account-button:hover{
+.login-form-open-btn:hover, .register-form-open-btn:hover{
     color: white;
+    scale: 1.05;
+    cursor: pointer;
 }
 
-.login-form, .register-form{
+.side-menu__login-form, .side-menu__register-form{
     display: none;
     margin-top: 10px;
 }
 
-.login-form-inputs, .register-form-inputs {
+.side-menu__register-form-inputs, .side-menu__login-form-inputs {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border: none;
 }
 
-.login-value, .password{
+.input-value{
     border-radius: 7px;
     height: 27px;
+    width: 200px;
     background-color: white;
     border: 1px solid black
 }
 
-.register-button, .login-button2 {
+textarea:focus, input:focus{
+    outline: none;
+}
+
+.side-menu__login-form-button-wrapper, .side-menu__register-form-button-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.create-account-btn-confirm, .login-btn-confirm {
     background-color: transparent;
     color: #c3c3c3;
     border: none;
@@ -117,16 +133,23 @@
     transition: 0.2s linear;
 }
 
-.register-button:hover, .login-button2:hover {
+.create-account-btn-confirm:hover, .login-btn-confirm:hover {
     color: white;
-    
+    cursor: pointer;
 }
 
-textarea:focus, input:focus{
-    outline: none;
+.error{
+    display: flex;
+    justify-content: center;
 }
 
-@media (max-width: 1208px) {
+.error-text{
+    color:#d10000;
+    font-size: 15px;
+    font-family: "Montserrat", sans-serif;
+}
+
+@media (max-width: 1280px) {
     .side-menu{
         display: flex;
         position: fixed;
@@ -135,7 +158,7 @@ textarea:focus, input:focus{
         width: 100%;
         height: 100%;
         background-color: rgba(17, 17, 16);
-        z-index: 200;
+        z-index: 5;
         transition: all 0.5s ease;
         transform: translate(-100%, 0px)
     }
@@ -174,4 +197,18 @@ textarea:focus, input:focus{
         scale: 1.2;
     }
 
+}
+
+@media (max-width: 760px) {
+    .side-menu._active{
+        transform: translate(0px, 0px);
+        width: 60%;
+    }
+}
+
+@media (max-width: 560px) {
+    .side-menu._active{
+        transform: translate(0px, 0px);
+        width: 100%;
+    }
 }
