--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,6 @@ body::-webkit-scrollbar-thumb {
     color: white;
 }
 
-hr {
-    color: rgb(252, 0, 0);
-    border: none;
-    border-top: 3px solid black;
-    text-align: center;
-    height: 10px;
-}
-
 .content{
     display: flex;
     flex-direction: column;
@@ -111,11 +103,6 @@ hr {
 
     .section--about-kitchen{
         background: linear-gradient(125deg, rgba(236,221,201,1) 0%, rgba(246,238,229,1) 40%, rgba(255,255,255,1) 100%);
-    }
-
-    .footer{
-        height: 125px;
-        background-color: rgba(17, 17, 16, 0.829);
     }
 
 .section__header{
@@ -187,49 +174,49 @@ hr {
     background: linear-gradient(110deg, rgba(25,25,25,1) 0%, rgba(61,51,47,1) 56%, rgba(80,74,64,1) 95%);
 }
 
-.box__photo-slider{
-    flex-direction: column;
-}
+    .box__photo-slider{
+        flex-direction: column;
+    }
 
-.section__header-text--photo-slider{
-    color: white;
-}
+    .section__header-text--photo-slider{
+        color: white;
+    }
 
-.section-content__slider-wrapper{
-    display: flex;
-    flex-direction: row;
-    height: 80%;
-    align-items: center;
-    justify-content: center;
-}
+    .section-content__slider-wrapper{
+        display: flex;
+        flex-direction: row;
+        height: 80%;
+        align-items: center;
+        justify-content: center;
+    }
 
-.slider{
-    width: 900px;
-    height: 550px;
-    box-shadow: 0px 0px 20px black;
-    overflow: hidden;
-}
+    .slider{
+        width: 900px;
+        height: 550px;
+        box-shadow: 0px 0px 20px black;
+        overflow: hidden;
+    }
 
-.slider-line{
-    display: flex;
-    position: relative;
-    height: 550px;
-    width: 3600px;
-    left: 0;
-    transition: all ease 0.85s;
-}
+    .slider-line{
+        display: flex;
+        position: relative;
+        height: 550px;
+        width: 3600px;
+        left: 0;
+        transition: all ease 0.85s;
+    }
 
-.slider-button{
-    height: 20%;
-    width: 10%;
-    border: none;
-    background-color: transparent;
-    transition: all ease 0.1s;
-}
+    .slider-button{
+        height: 20%;
+        width: 10%;
+        border: none;
+        background-color: transparent;
+        transition: all ease 0.1s;
+    }
 
-.slider-button:hover{
-    transform: scale(1.1);
-}
+    .slider-button:hover{
+        transform: scale(1.1);
+    }
 
 @media (max-width: 1280px) {
     .main{
@@ -346,37 +333,6 @@ hr {
     }
 }
 
-.footer-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 3%;
-    margin-right: 3%;
-}
-
-.contacts-text{
-    color: #d4c9c9;
-}
-
-.contactsf, .download{
-    display: flex;
-    flex-direction: column;
-}
-
-.apps {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.social{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    column-gap: 10%;
-    min-width: 110px;
-}
 
 
 
@@ -385,7 +341,7 @@ hr {
 
 
 
-
+/* бронирование */
 
 .section--booking{
     min-height: 1000px;
@@ -498,6 +454,8 @@ hr {
 
 
 
+/* Модальные окна бронирования */
+
 .popup{
     display: block;
     position: fixed;
@@ -563,4 +521,52 @@ hr {
     font-size: 18px;
     border-radius: 25px;
     background-color: rgb(236,221,201);
+}
+
+
+
+
+
+
+
+
+
+/* ФУТЕР */
+
+
+.footer{
+    height: 125px;
+    background-color: rgba(17, 17, 16, 0.829);
+}
+
+.footer-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+.contacts-text{
+    color: #d4c9c9;
+}
+
+.contactsf, .download{
+    display: flex;
+    flex-direction: column;
+}
+
+.apps {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.social{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 10%;
+    min-width: 110px;
 }
