--- a/css/admin.css
+++ b/css/admin.css
@@ -37,6 +37,17 @@ body::-webkit-scrollbar-thumb {
     flex-direction: row;
 }
 
+.main-admin{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgb(236,221,201);
+    background: linear-gradient(125deg, rgba(236,221,201,1) 0%, rgba(246,238,229,1) 40%, rgba(255,255,255,1) 100%);
+}
+
 .container{
     max-width: 1200px;
     padding: 0px 15px;
@@ -81,17 +92,45 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
 }
 
+.section__content--admin{
+    display: flex;
+    flex-direction: column;
+}
+
 .date-selection-form{
     height: 100px;
     display: flex;
+    row-gap: 10px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-@media (max-width: 510px) {
-    .date-popup-open-btn{
-        font-size: 20px;
-    }
+.to-main-page-a{
+    font-size: 15px;
+    font-weight: 500;
+    color: black;
+    font-family: "Montserrat", sans-serif;
+    transition: 0.1s linear;
+}
+
+.date-popup-button-wrapper{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+}
+
+.date-popup-open-btn{
+    font-size: 30px;
+    font-weight: 500;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    font-family: "Montserrat", sans-serif;
+    transition: 0.1s linear;
+    text-decoration: none;
+    border-radius: 20px;
+    width: 80%;
 }
 
 .date-popup-open-btn:hover{
@@ -99,63 +138,6 @@ body::-webkit-scrollbar-thumb {
     scale: 1.05;
 }
 
-.input-form-button-wrapper{
-    display: flex;
-    width: 50%;
-    justify-content: center;
-}
-
-.date-popup-open-btn{
-    border: 2px solid black;
-    background-color: white;
-    border-radius: 20px;
-    width: 400px;
-    height: 60px;
-    letter-spacing: 1px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-    font-weight: 500;
-    transition: 0.1s linear;
-}
-
-.to-main-page-wrapper{
-    display: flex;
-    align-items: center;
-    width: 50%;
-    justify-content: center;
-}
-
-.to-main-page-a{
-    font-weight: 500;
-    border: 2px solid black;
-    background-color: white;
-    border-radius: 20px;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-    width: 400px;
-    height: 60px;
-    color: black;
-    font-size: 30px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    transition: 0.1s linear;
-}
-
-.main-admin{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: rgb(236,221,201);
-    background: linear-gradient(125deg, rgba(236,221,201,1) 0%, rgba(246,238,229,1) 40%, rgba(255,255,255,1) 100%);
-}
-
-.section__content--admin{
-    display: flex;
-    flex-direction: column;
-}
 
 .box-list{
     display: flex;
@@ -167,11 +149,11 @@ body::-webkit-scrollbar-thumb {
     margin-top: 5px;
     margin-bottom: 5px;
     display: grid;
-    justify-content: center;
-    grid-template-columns: 8% 10% 22% 30% 30%;
+    grid-template-columns: 10% 15% 20% 20% 5%;
+    column-gap: 15px;
 }
 
-.list-item-text{
+.list-item-text, .list-item-btn{
     color:#000000;
     font-weight: 500;
     font-family: "Montserrat", sans-serif;
@@ -180,19 +162,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .list-item-btn{
-    color:#000000;
-    font-weight: 500;
-    font-family: "Montserrat", sans-serif;
-    text-decoration: none;
-    font-size: 15px;
-
-    margin-right: 5px;
-    margin-left: 5px;
-
     border: none;
+    width: 150px;
     border-radius: 5px;
-    height: 20px;
-    width: 130px;
     transition: all 0.1s linear;
     background-color: rgb(206, 231, 255);
 }
@@ -203,6 +175,43 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+@media (max-width: 750px) {
+    .section__header-text--admin{
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 630px) {
+    .section__header-text--admin{
+        font-size: 30px;
+    }
+
+    .list-item--example {
+        display: none !important;
+    }
+
+    .list-item{
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 390px) {
+    .section__header-text--admin{
+        font-size: 20px;
+    }
+
+    .list-item--example {
+        display: none !important;
+    }
+
+    .list-item{
+        display: inline;
+    }
+}
+
+
+/* модальные окна */
 
 .popup{
     display: block;
@@ -267,46 +276,4 @@ body::-webkit-scrollbar-thumb {
     font-size: 18px;
     border-radius: 25px;
     background-color: rgb(236,221,201);
-}
-
-
-
-
-
-
-.footer{
-    height: 125px;
-    background-color: rgba(17, 17, 16, 0.829);
-}
-
-.footer-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 3%;
-    margin-right: 3%;
-}
-
-.contacts-text{
-    color: #d4c9c9;
-}
-
-.contactsf, .download{
-    display: flex;
-    flex-direction: column;
-}
-
-.apps {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.social{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    column-gap: 10%;
-    min-width: 110px;
 }
