--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .main{
-    
-    flex: 1 1 auto;
     margin-left: 20%;
     width: 80%;
     display: flex;
@@ -105,6 +103,15 @@ body::-webkit-scrollbar-thumb {
         background: linear-gradient(125deg, rgba(236,221,201,1) 0%, rgba(246,238,229,1) 40%, rgba(255,255,255,1) 100%);
     }
 
+    .section--photo-slider{
+        height: auto;
+        display: flex;
+        min-height: 775px;
+        height: 100vh;
+        background: rgb(25,25,25);
+        background: linear-gradient(110deg, rgba(25,25,25,1) 0%, rgba(61,51,47,1) 56%, rgba(80,74,64,1) 95%);
+    }
+
 .section__header{
     display: flex;
     flex-direction: column;
@@ -165,24 +172,20 @@ body::-webkit-scrollbar-thumb {
             border-radius: 50%;
         }
 
-.section--photo-slider{
-    height: auto;
-    display: flex;
-    min-height: 775px;
-    height: 100vh;
-    background: rgb(25,25,25);
-    background: linear-gradient(110deg, rgba(25,25,25,1) 0%, rgba(61,51,47,1) 56%, rgba(80,74,64,1) 95%);
-}
-
-    .box__photo-slider{
-        flex-direction: column;
-    }
 
     .section__header-text--photo-slider{
         color: white;
     }
 
-    .section-content__slider-wrapper{
+    .section__content--photo-slider{
+        display: flex;
+        flex-direction: column;
+        justify-content: unset;
+        align-items: center;
+        height: 100%;
+    }
+
+    .slider-wrapper{
         display: flex;
         flex-direction: row;
         height: 80%;
@@ -524,49 +527,23 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-
-
-
-
-
-
-
 /* ФУТЕР */
 
 
 .footer{
     height: 125px;
-    background-color: rgba(17, 17, 16, 0.829);
+    background: rgba(17, 17, 16, 0.829);
 }
 
-.footer-container{
+.footer-section{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    margin-left: 3%;
-    margin-right: 3%;
+    justify-content: space-evenly;
 }
 
 .contacts-text{
     color: #d4c9c9;
-}
-
-.contactsf, .download{
-    display: flex;
-    flex-direction: column;
-}
-
-.apps {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.social{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    column-gap: 10%;
-    min-width: 110px;
 }
